<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/create_team"
        android:textSize="36sp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:letterSpacing="0.3"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/yellow_pokemon"
        app:hintTextColor="@color/yellow_pokemon"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/team_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow_pokemon"
            android:background="@color/blue_pokemon"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/yellow_pokemon"
        app:hintTextColor="@color/yellow_pokemon"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow_pokemon"
            android:background="@color/blue_pokemon"/>

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tv_pokemons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pokemons"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:fontFamily="@font/pokemon_solid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_description"
        android:letterSpacing="0.3"
        android:layout_marginHorizontal="16dp"/>

    <LinearLayout
        android:id="@+id/ll_pokemons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pokemons"
        android:layout_marginTop="16dp"
        android:weightSum="6"
        android:layout_marginHorizontal="16dp"
        android:minHeight="64dp">
    </LinearLayout>

    <!--
    <ProgressBar
        android:id="@+id/pb_pokemons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_pokemons"
        app:layout_constraintBottom_toTopOf="@id/bt_add_pokemon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
        -->


    <Button
        android:id="@+id/bt_add_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_pokemon"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:fontFamily="@font/pokemon_solid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_pokemons"
        android:letterSpacing="0.3" />


    <Button
        android:id="@+id/bt_create_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create_team"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:fontFamily="@font/pokemon_solid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_add_pokemon"
        android:letterSpacing="0.3"/>


    <View
        android:id="@+id/view_loading_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layerType="hardware"
        android:alpha="0.7"
        android:background="@android:color/black"
        android:elevation="6dp"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="6dp"
        android:visibility="gone"/>





</androidx.constraintlayout.widget.ConstraintLayout>